namespace EasySave.Core.Logging;

public interface ILogger
{
    void Write(LogEntry entry);
}
